feat: iniciando integração do minio
